Compile the core as J8 instead of J17 as preparation for supporting older MC versions. Also updated to Gradle 9 & the new shadow plugin.